# pema-platform-rust

./: .env  Cargo.toml  docker-compose.yml  frontend_model_analysis.md  migration_plan.md  platform_architecture.md  todo.md  whitepaper.md
.github/workflows/: build_wasm.yml
ahash_fork/: Cargo.toml
docs/: ui-ux-analysis.md
frontend/: index.html  script.js  style.css
nginx/: nginx.conf
nginx/conf.d/: default.conf
services/inventory-management/: Cargo.toml
services/inventory-management/src/: error.rs  main.rs  service.rs
services/inventory-management/src/handlers/: health_handler.rs  inventory_handlers.rs  mod.rs
services/landing-page/: Cargo.toml
services/landing-page/src/: validation.rs
services/landing-page/src/templates/: landing.html
services/landing-page/static/css/: style.css
services/notification-service/: Cargo.toml
services/notification-service/src/: main.rs
services/notification-service/src/handlers/: mod.rs
services/order-management/: Cargo.toml
services/order-management/src/: main.rs  service.rs
services/order-management/src/handlers/: mod.rs
services/payment-gateway/: Cargo.toml
services/payment-gateway/src/: error.rs  main.rs
services/payment-gateway/src/handlers/: mod.rs  payment_handlers.rs
services/product-catalog/: Cargo.toml
services/product-catalog/src/: main.rs  service.rs
services/product-catalog/src/handlers/: health_handler.rs
services/token-service/: Cargo.toml
services/token-service/src/: service.rs
services/token-service/src/handlers/: mod.rs  token_handlers.rs
services/user-management/: Cargo.toml
services/user-management/src/: main.rs  service.rs
services/user-management/src/handlers/: health_handler.rs  mod.rs  user_handlers.rs
services/vendor-management/: Cargo.toml
services/vendor-management/src/: service.rs
services/vendor-management/src/handlers/: vendor_handlers.rs
shared/config/: Cargo.toml
shared/config/src/: config.rs  lib.rs
shared/models/: Cargo.toml
shared/models/src/: inventory.rs  lib.rs  notification.rs  order.rs  pagination.rs  payment.rs  product.rs  user.rs  vendor.rs
tempfile_fork/: Cargo.toml
wasm-auth-backend/: Cargo.toml  Dockerfile
wasm-auth-backend/src/: error.rs  jwt.rs  lib.rs  main.rs
wasm-frontend/: Cargo.toml  index.html
wasm-frontend/src/: error.rs  lib.rs  main.rs
wasm-frontend/src/components/: admin_dashboard.rs  button.rs  card.rs  footer.rs  header.rs  input.rs  landing_page.rs  mod.rs  modal.rs  notification_item.rs  order_item.rs  order_management.rs  pagination.rs  product_card.rs  product_management.rs  sidebar.rs  stats_widget.rs  table.rs  user_profile.rs  vendor_card.rs
wasm-frontend/src/handlers/: mod.rs  page_handlers.rs
wasm-frontend/src/pages/: dashboard.rs  home.rs  inventory.rs  login.rs  mod.rs  orders.rs  products.rs  profile.rs  vendors.rs
wasm-frontend/src/services/: api.rs  auth.rs  mod.rs  order.rs  product.rs  user.rs  vendor.rs
wasm-frontend/src/state/: app_state.rs  auth_state.rs  mod.rs  order_state.rs  product_state.rs
wasm-frontend/src/static/css/: admin-dashboard.css  style.css
wasm-frontend/src/static/js/: admin-dashboard.js  script.js
wasm-frontend/src/templates/: admin-dashboard.html  landing.html
wasm-frontend/static/: styles.css
wasm-general-backend/: Cargo.toml  Dockerfile
wasm-general-backend/src/: error.rs  lib.rs  main.rs  service.rs
wasm-general-backend/src/handlers/: mod.rs  notification_handlers.rs  order_handlers.rs  product_handlers.rs
