[workspace]
members = [
    "services/user-management",
    "services/product-catalog",
    "services/token-service",
    "services/inventory-management",
    "services/order-management",
    "services/notification-service",
    "services/payment-gateway",
    "services/vendor-management",
    "services/landing-page",
    "shared/models",
    "shared/config",
]

[profile.dev]
overflow-checks = false

