[package]
name = "tempfile"
version = "0.3.6"
edition = "2021"

[dependencies]
cfg-if = "1.0"
libc = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }

[target.'wasm32-unknown-unknown'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = []

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
