[package]
name = "wasm-auth-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = { version = "4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono" ], optional = true }
dotenv = { version = "0.15", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
jsonwebtoken = { version = "8", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
models = { path = "../../shared/models" }
config = { path = "../../shared/config" }

[features]
default = ["server"]
server = [
    "actix-web",
    "tokio",
    "sqlx",
    "dotenv",
    "argon2",
    "rand",
    "jsonwebtoken",
    "log",
    "env_logger"
]
wasm = []

