[package]
name = "wasm-auth-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
models = { path = "../shared/models" }
config = { path = "../shared/config" }
jsonwebtoken = { version = "8" }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []

