[package]
name = "wasm-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "InputEvent",
  "MouseEvent",
  "SubmitEvent",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
models = { path = "../shared/models" }

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[dependencies.uuid]
version = "1.0"
features = ["v4", "js"]
