[package]
name = "wasm-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlSelectElement", "Event"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4"
models = { path = "../shared/models" }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

