[package]
name = "wasm-general-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
models = { path = "../../shared/models" }
config = { path = "../../shared/config" }



[features]
default = []
wasm = ["wasm-bindgen"]

