[package]
name = "wasm-general-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
models = { path = "../shared/models" }
config = { path = "../shared/config" }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
wasm = ["wasm-bindgen"]

