[package]
name = "wasm-general-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"

wasm-bindgen-futures = { version = "0.4" }

wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
models = { path = "../shared/models" }
config = { path = "../shared/config" }


[features]
default = []
wasm = ["wasm-bindgen"]

















