[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# For database interactions
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono" ] }
dotenv = "0.15"

# For logging
log = "0.4"
env_logger = "0.10"

# Shared models
models = { path = "../../shared/models" }
config = { path = "../../shared/config" }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"

